--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.EduFun"
         tools:targetApi="31">
         <activity
+            android:name=".LessonDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EduFun" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
