--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.EduFun"
         tools:targetApi="31">
         <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddChapterActivity"
+            android:exported="false" />
+        <activity
             android:name=".LessonDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.EduFun" />
