feat: add notification activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:exported="true">
 
         </activity>
+        <receiver android:name=".notification.NotificationReceiver" />
     </application>
 
 </manifest>
